--- a/todo.txt
+++ b/todo.txt
@@ -2,13 +2,17 @@
 
     Refactor TODO:
         - Condense css
-        - Lot/sim search (done, test)
-        - Easter eggs
-        - Market watch (done, test)
-        - Bookmarks (done, test)
+        - filters 
+        - Easter eggs (WIP)
         - Change localstorage keys (wip)
         - Resizing lot/sim/bookmark lists
             - Make css bottom: 10px or something
+            
+    Refactor TEST:
+        - Lot/sim search (done, test)
+        - Market watch (done, test)
+        - Bookmarks (done, test)
+        
 
     System:
         - Sim/lot windows cleanly generated from data object
