--- a/todo.txt
+++ b/todo.txt
@@ -4,10 +4,10 @@
         - Condense css
         - filters 
         - Easter eggs (WIP)
-        - Change localstorage keys (wip)
-        - Resizing lot/sim/bookmark lists
+        - Change localstorage keys (WIP)
+        - Resizing lot/sim/bookmark lists (WIP)
             - Make css bottom: 10px or something
-            
+
     Refactor TEST:
         - Lot/sim search (done, test)
         - Market watch (done, test)
