--- a/todo.txt
+++ b/todo.txt
@@ -18,6 +18,7 @@
         - Fix clock 12:00 am/pm
         - Upgrade versioning system
         - Change "idList" to "simfinder-bookmarks" in localStorage
+        - Export bookmarks
         - Choose to sort sims by age or by name
     
     Possible Features
