--- a/todo.txt
+++ b/todo.txt
@@ -5,7 +5,7 @@
         - New custom styles, for label and description
         - Style tweaks
         - Fixed noon AM/PM bug
-        
+        - A couple new sim filters
 
 
     System:
