- hopefully fixed innacurate sim ages and birthdays

--- a/todo.txt
+++ b/todo.txt
@@ -6,6 +6,7 @@
         - Style tweaks
         - Fixed noon AM/PM bug
         - A couple new sim filters
+        - Hopefully fixed innacurate som ages and birthdays
 
 
     System:
