--- a/todo.txt
+++ b/todo.txt
@@ -9,11 +9,11 @@
         - Hopefully fixed innacurate sim ages and birthdays
         - A birthday cake will now appear next to sims and lots on their birthday (see if this even works)
         - Representation for our ursine friends
+        - Ability to sort lists alphabetically (needs testing)
 
     System:
         - Change "idList" to "simfinder-bookmarks" in localStorage
         - Export bookmark button
-        - Choose to sort sims by age or by name
     
     Possible Features
         - Make easier to use on mobile
