--- a/todo.txt
+++ b/todo.txt
@@ -7,7 +7,8 @@
         - Fixed noon AM/PM bug
         - A couple new sim filters
         - Hopefully fixed innacurate sim ages and birthdays
-        - A birthday cake will now appear next to sims and lots on their birthday (see if this even works)
+        - A birthday cake will now appear next to sims and lots on their birthday
+            - Fix so day 0 sims dont have one
         - Representation for our ursine friends
         - Ability to sort lists alphabetically (needs testing)
 
