--- a/todo.txt
+++ b/todo.txt
@@ -15,6 +15,7 @@
         - Ability to sort lists alphabetically
 
     System:
+        - Fix reagan rainbow looping incorrectly
         - Rename all "short" data to "online"
         - Rename all "long" data to "cache"
         - Change "idList" to "simfinder-bookmarks" in localStorage
