--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,6 @@
 - Rewrite TODO:
 
-    //Rea's Frontroom Casino
-    New Features:
+    Patchnotes:
         - Click sim or lot label to copy to clipboard
         - Finally added lot bios
         - Various layout tweaks
@@ -18,9 +17,7 @@
         - Ability to sort lists alphabetically
         - Export and import bookmarks
 
-    TODO:
-    
-    Low Priority:
+    Low Priority TODO:
         - Rename all "short" data to "online"
         - Rename all "long" data to "cache"
         - Change "idList" to "simfinder-bookmarks" in localStorage
