--- a/todo.txt
+++ b/todo.txt
@@ -4,6 +4,7 @@
         - Fixed owner always being counted as hosting when online, even when not at lot
         - slightly better hidden/unhidden roommate detection in sim list
         - Show sims in lot on offline lots to view roommates
+        - Added filter for online staff
 
     Bugs:
         - Sim dates still slightly incorrect
@@ -25,11 +26,12 @@
                     - Dark Green
         - Special sim-head for mod accounts (M.O.M.I, D.A.D.D.I, etc)
             - Figure out which head to use
+                - Raccoon?
         - Light/dark mode
             - Need to impliment into GUI somewhere (sidebar?)
         - Some functions are still out of place
             - Move all GUI/writing functions to GUI etc
-        - Keep track of API stats
+        - Keep track of API ping stats
 
     Low Priority TODO:
         - Clean up css
