--- a/todo.txt
+++ b/todo.txt
@@ -7,25 +7,20 @@
         - Added filter for online staff
         - Wrench next to staff's name
         - Print API ping stats in console
+        - New custom styles
 
     Bugs:
         - Sim dates still slightly incorrect
 
     TODO:
-        - Add themes for holidays
-            - Should be togglable
-            - Christmas - Snowflakes falling
-            - Maybe just change backgrounds?
-        - More colors
-            - Pinpoint colors that are lacking
-            - Orange
-            - Yellow
-                - Make different from gold
-            - Navy/baby blue
-            - Silver
-                - Christmas Colors
-                    - Maroon
-                    - Dark Green
+        - Add brushed texture to Reagan block style
+        - Get style example screenshots for:
+            - Orange "o"
+            - Yellow "y"
+            - Navy blue "nb"
+            - Silver "s"
+            - Maroon "m"
+            - Green "g"
         - Special sim-head for mod accounts (M.O.M.I, D.A.D.D.I, etc)
             - Figure out which head to use
                 - Raccoon?
@@ -35,12 +30,17 @@
             - Move all GUI/writing functions to GUI etc
 
     Low Priority TODO:
+        - Add background themes for holidays
+            - Should be togglable
+            - Christmas - Snowflakes falling
+            - Maybe just change backgrounds?
         - Clean up css
+            - Many scrambled and unused classes
         - Remove (Maybe Hosting) if all sims accounted for
+            - Create possibility tree and figure this out
         - Rename all "short" data to "online", all "long" data to "cache"
             - Issue is some cache data is immediately useful for online judgements
         - Change "idList" to "simfinder-bookmarks" in localStorage
-        - Bookmark checkbox graphic
         - Improve market watch
             - Could impliment the rare/event dates list
 
